# NeuralNetworkChess

./: .gitattributes  README.md  pyproject.toml
neuralnetworkchess/: structure.md
neuralnetworkchess/data/processed/: fen_moves_2013-01.npz  lichess_db_standard_rated_2013-01-100000.npz
neuralnetworkchess/src/scripts/: preprocess.py
