[project]
name = "NeuralNetworkChess"
version = "0.1.0"
description = "Project for chess engine powered by neural networks"
authors = [
    {name = "Ben",email = "holbrookben12@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chess (>=1.11.2,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "numpy (>=2.2.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
